--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Trip Planner</title>
 <script src="./bundle.js" defer ></script>
+<link href='https://api.mapbox.com/mapbox-gl-js/v1.3.2/mapbox-gl.css' rel='stylesheet' />
 <link rel="stylesheet" href="./style.css">
 </head>
 <body>
